tests, fixed create event+event view