@@ -58,6 +58,11 @@ public class MapsEspressoTest {
     public void setUp() {
         Intents.init();
         dataSource = new DBHandler(InstrumentationRegistry.getInstrumentation().getTargetContext());
+        dataSource.deleteTableContents("events");
+        dataSource.deleteTableContents("messages");
+        dataSource.deleteTableContents("timeslots");
+        dataSource.deleteTableContents("guestlists");
+        dataSource.deleteTableContents("profiles");
     }
 
     @After
@@ -70,6 +75,10 @@ public class MapsEspressoTest {
     public void testPastDeadlinePastDecidedTime() {
 
         Integer pastEventId = dataSource.addNewEvent("past event", "username", -5.0, -5.0, Long.valueOf(10));
+        dataSource.addNewTimeslot(pastEventId, "username", Long.valueOf(11));
+        dataSource.addNewTimeslot(pastEventId, "username", Long.valueOf(12));
+        dataSource.addNewTimeslot(pastEventId, "username", Long.valueOf(13));
+
         Event pastEventInfo = dataSource.getEventInfo(pastEventId);
         pastEventInfo.setFinalTime(Long.valueOf(15));
         dataSource.updateEventInfo(pastEventInfo);
@@ -91,6 +100,9 @@ public class MapsEspressoTest {
         Integer pastEventId = dataSource.addNewEvent("semi-past event", "username", -15.0, -15.0, Long.valueOf(10));
         Event pastEventInfo = dataSource.getEventInfo(pastEventId);
         Long futureTime = new Long(System.currentTimeMillis() + 100000);
+        dataSource.addNewTimeslot(pastEventId, "username", Long.valueOf(11));
+        dataSource.addNewTimeslot(pastEventId, "username", Long.valueOf(12));
+        dataSource.addNewTimeslot(pastEventId, "username", futureTime);
         pastEventInfo.setFinalTime(futureTime);
         dataSource.updateEventInfo(pastEventInfo);
 
@@ -110,10 +122,15 @@ public class MapsEspressoTest {
 
         Long futureDeadline = new Long(System.currentTimeMillis() + 100000);
         Long futureDecidedTime = new Long(System.currentTimeMillis() + 100001);
-        Integer pastEventId = dataSource.addNewEvent("future event", "username", -5.0, -5.0, futureDeadline);
-        Event pastEventInfo = dataSource.getEventInfo(pastEventId);
-        pastEventInfo.setFinalTime(futureDecidedTime);
-        dataSource.updateEventInfo(pastEventInfo);
+        Integer futureEventId = dataSource.addNewEvent("future event", "username", -5.0, -5.0, futureDeadline);
+        dataSource.addNewTimeslot(futureEventId, "username", futureDecidedTime);
+        dataSource.addNewTimeslot(futureEventId, "username", futureDecidedTime+2);
+        dataSource.addNewTimeslot(futureEventId, "username", futureDecidedTime+1);
+
+
+        Event futureEventInfo = dataSource.getEventInfo(futureEventId);
+        futureEventInfo.setFinalTime(futureDecidedTime);
+        dataSource.updateEventInfo(futureEventInfo);
 
         device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation());
         try {
@@ -128,7 +145,10 @@ public class MapsEspressoTest {
 //    Events on the map should be clickable and yield the event detail page.
     @Test
     public void testMapElementClickable() throws UiObjectNotFoundException, InterruptedException {
-        dataSource.addNewEvent("good event", "username", 40.0, 40.0, Long.valueOf(System.currentTimeMillis() + 100000));
+        int eventId = dataSource.addNewEvent("good event", "username", 40.0, 40.0, Long.valueOf(System.currentTimeMillis() + 100000));
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100001));
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100002));
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100003));
 
         device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation());
         UiObject marker = device.findObject(new UiSelector().descriptionContains("good event"));
@@ -143,20 +163,25 @@ public class MapsEspressoTest {
     public void testMapPinsDynamic() {
 
         Long futureDeadline = new Long(System.currentTimeMillis() + 100000);
-        dataSource.addNewEvent("future event", "username", -5.0, -5.0, futureDeadline);
-        dataSource.addNewEvent("future event - out of bounds", "username", -5.0, 75.0, futureDeadline);
-        dataSource.addNewEvent("future event - out of bounds", "username", -5.0, 125.0, futureDeadline);
-        dataSource.addNewEvent("future event - out of bounds", "username", -5.0, 175.0, futureDeadline);
-        dataSource.addNewEvent("future event - out of bounds", "username", -5.0, 45.0, futureDeadline);
+        int eventId = dataSource.addNewEvent("future event", "username", -5.0, -5.0, futureDeadline);
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100001));
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100002));
+        dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100003));
+
+        double baseLongitude = 45.0;
+        for (int i = 0 ; i < 5; i++) {
+            eventId = dataSource.addNewEvent("future event - out of bounds", "username", -5.0, baseLongitude+i*30.0, futureDeadline);
+            dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100001));
+            dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100002));
+            dataSource.addNewTimeslot(eventId, "username", new Long(System.currentTimeMillis() + 100003));
+        }
 
         device = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation());
         try {
-            UiObject marker = device.findObject(new UiSelector().descriptionContains("future event"));
-            TimeUnit.SECONDS.sleep(3);
-
             // perform scroll
             Espresso.onView(ViewMatchers.withId(R.id.map)).perform(ViewActions.swipeLeft());
-            marker = device.findObject(new UiSelector().descriptionContains("future event - out of bounds"));
+            UiObject marker = device.findObject(new UiSelector().descriptionContains("future event - out of bounds"));
+            TimeUnit.SECONDS.sleep(2);
 
             marker.click();
             return;
